# neo4j-study

./: .env.example  .env.sample  KG_P1_01_neo4j_Introduction.ipynb  KG_P1_02_neo4j_cypher_advanced.ipynb  KG_P1_03_neo4j_movie_01_csv.ipynb  KG_P1_03_neo4j_movie_02_basic_search.ipynb  KG_P1_03_neo4j_movie_03_full-text_search.ipynb  KG_P1_03_neo4j_movie_04_vector_search.ipynb  KG_P1_03_neo4j_movie_05_text2cypher.ipynb  KG_P1_03_neo4j_movie_06_graphRAG.ipynb  KG_P2_01_news_analysis.ipynb  README.md  langfuse-test.py  main.py  pyproject.toml  test.py  배운내용.txt
news/: news_article_1.md  news_article_4.md  news_article_5.md
news_data/: news_article_2.md  news_article_3.md  news_metadata.jsonl
